[package]
name = "dynode"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
rocket = { workspace = true }

primitives = { path = "../../crates/primitives" }
gem_tracing = { path = "../../crates/tracing" }
gem_client = { path = "../../crates/gem_client" }
settings_chain = { path = "../../crates/settings_chain" }

regex = { version = "1.12.1" }
moka = { version = "0.12.11", features = ["future"] }
url = { workspace = true }
