[package]
name = "operator"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

settings = { path = "../../crates/settings" }
storage = { path = "../../crates/storage" }
api_connector = { path = "../../crates/api_connector" }
job_runner = { path = "../../crates/job_runner" }
