[package]
name = "parser"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

primitives = { path = "../../crates/primitives" }
storage = { path = "../../crates/storage" }
settings = { path = "../../crates/settings" }
settings_chain = { path = "../../crates/settings_chain" }
gem_chain_rpc = { path = "../../crates/gem_chain_rpc" }
api_connector = { path = "../../crates/api_connector" }
localizer = { path = "../../crates/localizer" }
number_formatter = { path = "../../crates/number_formatter" }
streamer = { path = "../../crates/streamer" }
cacher = { path = "../../crates/cacher" }
