[package]
name = "parser"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true }

gem_tracing = { path = "../../crates/tracing" }
primitives = { path = "../../crates/primitives" }
storage = { path = "../../crates/storage" }
settings = { path = "../../crates/settings" }
settings_chain = { path = "../../crates/settings_chain" }
chain_traits = { path = "../../crates/chain_traits" }
api_connector = { path = "../../crates/api_connector" }
localizer = { path = "../../crates/localizer" }
number_formatter = { path = "../../crates/number_formatter" }
streamer = { path = "../../crates/streamer" }
cacher = { path = "../../crates/cacher" }
nft = { path = "../../crates/nft" }

[dev-dependencies]
primitives = { path = "../../crates/primitives", features = ["testkit"] }
