[package]
name = "pricer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }

storage = { path = "../../crates/storage" }
primitives = { path = "../../crates/primitives" }
