[package]
name = "pricer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde_json = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

storage = { path = "../../crates/storage" }
coingecko = { path = "../../crates/coingecko" }
primitives = { path = "../../crates/primitives" }
settings = { path = "../../crates/settings" }
