[package]
name = "coingecko"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
primitives = { path = "../primitives" }
chrono = { workspace = true }
lazy_static = { workspace = true }
gem_client = { path = "../gem_client", features = ["reqwest"] }
reqwest = { workspace = true }
