[package]
name = "defi"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

primitives = { path = "../primitives" }
