[package]
name = "fiat"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
bigdecimal = { workspace = true }
uuid = { workspace = true }

settings = { path = "../settings" }
storage = { path = "../storage" }
primitives = { path = "../primitives" }
