[package]
name = "fiat"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
bigdecimal = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

settings = { path = "../settings" }
storage = { path = "../storage" }
primitives = { path = "../primitives" }
chain_primitives = { path = "../chain_primitives" }
serde_serializers = { path = "../serde_serializers" }
number_formatter = { path = "../number_formatter" }
cacher = { path = "../cacher" }
streamer = { path = "../streamer" }

[dev-dependencies]
tokio-test = { version = "*" }

# Integration tests that require manual execution
[[test]]
name = "paybis_integration_test"
test = false

[[test]]
name = "moonpay_integration_test"
test = false

[[test]]
name = "transak_integration_test"
test = false